--- a/richplay/res/layout/comment_item_layout.xml
+++ b/richplay/res/layout/comment_item_layout.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="2dp">
 
     <ImageView
         android:id="@+id/imageView1"
