--- a/richplay/res/layout/picinfo_layout.xml
+++ b/richplay/res/layout/picinfo_layout.xml
@@ -32,21 +32,27 @@
 
                 <Button
                     android:id="@+id/share"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:drawable/ic_lock_lock" />
+                    android:layout_width="70px"
+                    android:layout_height="70px"
+                    android:background="@drawable/share" />
 
-                <Button
+                <TextView
                     android:id="@+id/btn_go"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70px"
+                    android:layout_marginLeft="5dp"
                     android:layout_toRightOf="@+id/share"
-                    android:background="@android:drawable/ic_dialog_dialer" />
+                    android:background="@drawable/guanzhu"
+                    android:gravity="center_vertical|right"
+                    android:paddingRight="14dp"
+                    android:text="@string/guanzhu"
+                    android:textColor="#9B9B9B"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70px"
                     android:layout_alignParentRight="true"
                     android:background="@drawable/save" />
             </RelativeLayout>
