Signed-off-by: han_lru <han_lru@163.com>

--- a/richplay/res/layout/main_pain.xml
+++ b/richplay/res/layout/main_pain.xml
@@ -64,7 +64,8 @@
                 <ImageButton
                     android:id="@+id/imageButtonLoadPicture"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" >
                 </ImageButton>
 
                 <ImageButton
@@ -106,9 +107,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayoutDown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonLayout" >
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/buttonLayout"
+        android:gravity="center" >
 
         <LinearLayout
             android:id="@+id/paintViewLayout"
