--- a/richplay/res/layout/picinfo_layout.xml
+++ b/richplay/res/layout/picinfo_layout.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon"
+                android:src="@drawable/list_item_bg"
                 android:visibility="visible" />
 
             <RelativeLayout
