--- a/richplay/res/layout/main_pain.xml
+++ b/richplay/res/layout/main_pain.xml
@@ -73,6 +73,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >
                 </ImageButton>
+                 <ImageButton
+                    android:id="@+id/imageButtonLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+                </ImageButton>
             </LinearLayout>
         </HorizontalScrollView>
     </LinearLayout>
